--- a/style.css
+++ b/style.css
@@ -1,30 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
 
-/* root */
 :root {
-    --clr-Yellow: #f4d04e;    
-    --clr-White: #ffffff;
-    --clr-Grey: #808080;
-    --clr-Black: #121212;
+    --yellow: hsl(47, 88%, 63%);
+    --white: hsl(0, 0%, 100%);
+    --gray: hsl(0, 0%, 42%);
+    --dark-gray: hsl(0, 0%, 7%);
 
-    --ff-main: "Figtree", sans-serif;
-    --fs-main: 16px; 
-    --fw-600: 600;
+    --ff: 'Figtree', sans-serif;
+    --fs: 16px;
+    --fw-500: 500;
     --fw-800: 800;
 }
 
 /* reset */
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
+
+* {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 img {
     display: block;
-    max-width: 100%;
+    width: 100%;
 }
 
 h1 {
@@ -32,24 +30,24 @@ h1 {
 }
 
 body {
-    font-family: var(--ff-main);
-    font-size: var(--fs-main);
-    font-weight: var(--fw-600);
-    color: var(--clr-Grey);
-    background: var(--clr-Yellow);
+    font-family: var(--ff);
+    font-size: var(--fs);
+    font-weight: var(--fw-500);
+    color: var(--gray);
+    background: var(--yellow);
 }
 
-/* text styles */
+/* text style*/
 .blog-category, .blog-meta, .blog-title, .author-name {
-    color: var(--clr-Black);
+    color: var(--dark-gray);
 }
-
 .blog-category {
     display: inline-block;
+    background: var(--yellow);
+    padding: 0.5rem 0.8rem;
+    color: var(--dark-gray);
     font-weight: var(--fw-800);
-    padding: .5rem .8rem;
-    border-radius: .2rem;
-    background: var(--clr-Yellow);
+    border-radius: 0.3rem;
 }
 
 .blog-meta {
@@ -61,10 +59,11 @@ body {
     font-size: 1.4rem;
     cursor: pointer;
     transition: color .3s ease;
+    
 }
 
 .blog-title:hover {
-    color: var(--clr-Yellow);
+    color: var(--yellow);
 }
 
 .author-name {
@@ -73,14 +72,17 @@ body {
 }
 
 /* layout styles */
+
 .author-data {
     display: flex;
-    align-items: center;
+    place-items: center;
     gap: 1rem;
+    padding-top: 0.5rem;
+
 }
 
-
 /* general styles */
+
 .wrapper {
     display: grid;
     place-items: center;
@@ -88,25 +90,23 @@ body {
 }
 
 .blog-container {
-    max-width: 24rem;
+    background: var(--white);
+    max-width: 23rem;
     padding: 1.5rem;
     margin: 0 1.5rem;
     border-radius: 1rem;
-    border: 1px solid var(--clr-Black);
-    box-shadow: 7px 7px 0 var(--clr-Black);
-    background: var(--clr-White);
-    transition: box-shadow .3s ease;
+    box-shadow: 7px 7px 0 var(--dark-gray);
+    border: 1px solid var(--dark-gray);
 }
-
 
 .blog-container > * + * {
     margin-top: 1rem;
 }
 
 .author-image {
-    width: 3rem;
+    width: 2rem;
 }
 
 .blog-image {
-    border-radius: .8rem;
+    border-radius: .6rem;
 }
