--- a/style.css
+++ b/style.css
@@ -110,3 +110,6 @@ body {
 .blog-image {
     border-radius: .6rem;
 }
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
