--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
 
 /* reset */
 
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -25,11 +27,8 @@ img {
     width: 100%;
 }
 
-h1 {
-    line-height: 1.1;
-}
-
 body {
+    line-height: 1.4;
     font-family: var(--ff);
     font-size: var(--fs);
     font-weight: var(--fw-500);
@@ -43,8 +42,9 @@ body {
 }
 .blog-category {
     display: inline-block;
+    font-size: 14px;
     background: var(--yellow);
-    padding: 0.5rem 0.8rem;
+    padding: 0.3rem 0.8rem;
     color: var(--dark-gray);
     font-weight: var(--fw-800);
     border-radius: 0.3rem;
@@ -52,6 +52,7 @@ body {
 
 .blog-meta {
     font-size: 14px;
+    font-weight: var(--fw-500);
 }
 
 .blog-title {
@@ -91,7 +92,7 @@ body {
 
 .blog-container {
     background: var(--white);
-    max-width: 23rem;
+    max-width: 23em;
     padding: 1.5rem;
     margin: 0 1.5rem;
     border-radius: 1rem;
