--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 /* text style*/
 .blog-category, .blog-meta, .blog-title, .author-name {
-    color: var(-dark-gray);
+    color: var(--dark-gray);
 }
 .blog-category {
     display: inline-block;
